# opencode-talk

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: kokoro_server.py
src-tauri/src/: audio.rs  lib.rs  main.rs  transcription_server.rs  tts.rs
src/components/: ConfirmDialog.tsx  FloatingPanel.tsx  Settings.tsx  StatusIndicator.tsx  Toast.tsx
src/components/setup/: SetupProgress.tsx  SetupWizard.tsx  StepContainer.tsx
src/components/setup/steps/: MacrowhisperConfigure.tsx  MacrowhisperInstall.tsx  Ready.tsx  StubStep.tsx  SuperWhisperConfigure.tsx  SuperWhisperInstall.tsx  VoiceInputChoice.tsx  Welcome.tsx  index.ts
src/components/setup/ui/: ActionButton.tsx  BackButton.tsx  CodeBlock.tsx  DetectionIndicator.tsx  RadioCard.tsx  SkipLink.tsx  SuperWhisperIllustration.tsx  index.ts
src/hooks/: useDetectionPolling.ts  useOpenCode.ts  useVoiceInput.ts  useVoiceOutput.ts
src/lib/: confirmation.ts  response-formatter.ts  sentence-buffer.ts  utils.ts  voice-bridge.ts
src/lib/stt/: index.ts  macos.ts  superwhisper.ts
src/lib/tts/: index.ts
src/stores/: conversation.ts  settings.ts  setup.ts
src/styles/: globals.css
