[package]
name = "opencode-talk"
version = "0.1.0"
description = "Voice interface for OpenCode"
authors = ["Dan"]
edition = "2021"
default-run = "opencode-talk"

[lib]
name = "opencode_talk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", default-features = false, features = ["wav", "mp3"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
once_cell = "1"
tiny_http = "0.12"
reqwest = { version = "0.11", features = ["json"] }
